Implement products API
